src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Photo__c</fullName>
        <label>Customer Photo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateOfLastPurchase__c</fullName>
        <label>Date of  Last Purchase</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_LastPurchase__c</fullName>
        <inlineHelpText>Max Transaction Date for PO</inlineHelpText>
        <label>Date of Last Purchase</label>
        <summarizedField>Transaction__c.Record_Created_at__c</summarizedField>
        <summaryFilterItems>
            <field>Transaction__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>PO Record Type</value>
        </summaryFilterItems>
        <summaryForeignKey>Transaction__c.Contact__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DateofLast_POS__c</fullName>
        <formula>IF(ISNULL(Last_PO_Date__c) = FALSE  &amp;&amp; ISNULL(startDate__c )= FALSE,(TEXT(FLOOR(TODAY() - Last_PO_Date__c ))  &amp; &quot; Days &quot;),NULL)</formula>
        <inlineHelpText>Last PO - Contact Start Date</inlineHelpText>
        <label>Days from Last Purchase (POS)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaysFromFirstOfferTakenToFirstPos__c</fullName>
        <inlineHelpText>First POS Date - First PO Date</inlineHelpText>
        <label>Days From First Offer Taken To First POS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysFromSignupToFirstOfferTaken__c</fullName>
        <label>Days From Signup To First Offer Taken</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_1st_signup__c</fullName>
        <formula>IF(ISNULL(X1st_PO_Date__c ) = FALSE  &amp;&amp; ISNULL(startDate__c )= FALSE,(TEXT(FLOOR(X1st_PO_Date__c   -startDate__c ))  &amp; &quot; Days &quot;),NULL)</formula>
        <inlineHelpText>First PO Date - Contact Start Date</inlineHelpText>
        <label>Days From Signup To 1st Offer Taken</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email X</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encrypted_Password__c</fullName>
        <label>Encrypted Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName &amp;&quot; &quot; &amp; LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsManually_createed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Manually createed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_POS_Date__c</fullName>
        <label>Last POS Date</label>
        <summarizedField>Transaction__c.date1__c</summarizedField>
        <summaryFilterItems>
            <field>Transaction__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Transactions Record Type</value>
        </summaryFilterItems>
        <summaryForeignKey>Transaction__c.Contact__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_PO_Date__c</fullName>
        <label>Last PO Date</label>
        <summarizedField>Transaction__c.Record_Created_at__c</summarizedField>
        <summaryFilterItems>
            <field>Transaction__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>PO Record Type</value>
        </summaryFilterItems>
        <summaryForeignKey>Transaction__c.Contact__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Marketa_Card_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>db external key</inlineHelpText>
        <label>Marqeta Card ID</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Merchants__c</fullName>
        <label>No. of Merchants</label>
        <summarizedField>Transaction__c.MRCHT__c</summarizedField>
        <summaryForeignKey>Transaction__c.Contact__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumOffersTaken__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Offers taken</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumPosTransactions__c</fullName>
        <defaultValue>0</defaultValue>
        <label># POS transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_OffersTaken__c</fullName>
        <description>Count # of records from the transactions table where Transaction_type = &quot;PurchaseOrder&quot; and CardHolder = Contact.JcardId</description>
        <inlineHelpText>Total of PO Transactions</inlineHelpText>
        <label>Num Offers Taken</label>
        <summarizedField>Transaction__c.PO__c</summarizedField>
        <summaryFilterItems>
            <field>Transaction__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>PO Record Type</value>
        </summaryFilterItems>
        <summaryForeignKey>Transaction__c.Contact__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumofGiftsGiven__c</fullName>
        <defaultValue>0</defaultValue>
        <label>#gifts given</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumofGiftsReceived__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Gifts received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumofMerchants__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Merchants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization_Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Organization Record Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POS_Transactions__c</fullName>
        <inlineHelpText>Total of POS Transactions</inlineHelpText>
        <label>Total # POS Transactions</label>
        <summarizedField>Transaction__c.POS_1__c</summarizedField>
        <summaryForeignKey>Transaction__c.Contact__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Password_Salt__c</fullName>
        <label>Password Salt</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlusMScore__c</fullName>
        <defaultValue>0</defaultValue>
        <label>+M Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>mysql db field</inlineHelpText>
        <label>Record ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reset_Password_Token__c</fullName>
        <label>Reset Password Token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Relationship Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TTV_Amt__c</fullName>
        <inlineHelpText>Sum of all POS Transactions</inlineHelpText>
        <label>TTV $ Amt</label>
        <summarizedField>Transaction__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Transaction__c.ITC__c</field>
            <operation>equals</operation>
            <value>POS</value>
        </summaryFilterItems>
        <summaryForeignKey>Transaction__c.Contact__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TTV__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TTV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>X1st_POS_Date__c</fullName>
        <label>1st POS Date</label>
        <summarizedField>Transaction__c.date1__c</summarizedField>
        <summaryFilterItems>
            <field>Transaction__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Transactions Record Type</value>
        </summaryFilterItems>
        <summaryForeignKey>Transaction__c.Contact__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X1st_PO_Date__c</fullName>
        <label>1st PO Date</label>
        <summarizedField>Transaction__c.Record_Created_at__c</summarizedField>
        <summaryFilterItems>
            <field>Transaction__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>PO Record Type</value>
        </summaryFilterItems>
        <summaryForeignKey>Transaction__c.Contact__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Xst_POS_offer__c</fullName>
        <formula>IF(ISNULL(X1st_POS_Date__c) = FALSE  &amp;&amp; ISNULL(X1st_PO_Date__c)= FALSE,(TEXT(FLOOR(X1st_POS_Date__c  - X1st_PO_Date__c))  &amp; &quot; Days &quot;),NULL)</formula>
        <inlineHelpText>First POS Date - First PO Date</inlineHelpText>
        <label>Days From First Offer Taken To First POS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zoho_Contact_ID__c</fullName>
        <label>Zoho Contact ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>active__c</fullName>
        <label>Active</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>affiliate_organization__c</fullName>
        <label>Affiliate Organization</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>authentication_token__c</fullName>
        <label>Authentication Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>authorized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authorized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>beta_application__c</fullName>
        <label>beta application</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cardProduct__c</fullName>
        <inlineHelpText>Identifies the which physical card the Cardholder is carrying.</inlineHelpText>
        <label>Card Product</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cim_id__c</fullName>
        <label>cim id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>contact_relationship_c__c</fullName>
        <label>Contact Relationship</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>current_sign_in_at__c</fullName>
        <label>Current Sign In At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>current_sign_in_ip__c</fullName>
        <label>Current Sign In IP</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>employee_id__c</fullName>
        <label>Employee Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>employer__c</fullName>
        <label>Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>endDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>foursquare_checkin_on_card_swipe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Foursquare Checkin on Card Swipe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>foursquare_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Foursquare Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gender__c</fullName>
        <label>Gender</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gpaAuthAllowed__c</fullName>
        <label>GPA Auth Allowed</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>honorific__c</fullName>
        <label>Honorific</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_subscribed_to_transaction_events_thro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscribed to Transaction Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jcard_id__c</fullName>
        <label>JCard ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_sign_in_at__c</fullName>
        <label>Last Sign In At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>last_sign_in_ip__c</fullName>
        <label>Last Sign In IP</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Date__c</fullName>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Program_Id__c</fullName>
        <label>Acquisition Program Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Program__c</fullName>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_City__c</fullName>
        <label>Inferred City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Company__c</fullName>
        <label>Inferred Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Country__c</fullName>
        <label>Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Metropolitan_Area__c</fullName>
        <label>Inferred Metropolitan Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Phone_Area_Code__c</fullName>
        <label>Inferred Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Postal_Code__c</fullName>
        <label>Inferred Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_State_Region__c</fullName>
        <label>Inferred State Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Lead_Score__c</fullName>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Referrer__c</fullName>
        <label>Original Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Engine__c</fullName>
        <label>Original Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Phrase__c</fullName>
        <label>Original Search Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Info__c</fullName>
        <defaultValue>&quot;Contact&quot;</defaultValue>
        <label>Original Source Info</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Type__c</fullName>
        <defaultValue>&quot;salesforce.com&quot;</defaultValue>
        <label>Original Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>number_of_supporters__c</fullName>
        <label># of Supporters</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>only_show_close_to_me_deals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Only Show Close to Me Deals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>overflow_payment_profile_id__c</fullName>
        <label>Overflow Payment Profile ID</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>promo_code__c</fullName>
        <label>Promo Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>realId__c</fullName>
        <label>Real Id</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rejection_reason__c</fullName>
        <label>rejection_reason</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>share_foursquare_checkins_on_facebook__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Share Foursquare Checkins on Facebook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>share_foursquare_checkins_on_twitter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Share Foursquare Checkins on Twitter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sign_in_count__c</fullName>
        <label>Sign in Count</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>startDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Contacts_to_Clean_the_First_Last_Name</fullName>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.FIRST_NAME</field>
            <operation>equals</operation>
        </filters>
        <label>Contacts to Clean the First &amp; Last Name</label>
    </listViews>
    <recordTypes>
        <fullName>Card_HolderLayout</fullName>
        <active>true</active>
        <description>For all Marqeta Customers (Card Holder)</description>
        <label>Card Holders Layouts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Enterprise_Record_Type</fullName>
        <active>true</active>
        <description>Enterprise Contacts</description>
        <label>Enterprise Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Merchant_Record_Type</fullName>
        <active>true</active>
        <description>All Contacts related to Brand</description>
        <label>Merchant Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Organization_Record_Type</fullName>
        <active>true</active>
        <description>All Contacts related to Organizations</description>
        <label>Organization Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Store_Record_Type</fullName>
        <active>true</active>
        <description>All Contacts related to Stores</description>
        <label>Store Record Type</label>
    </recordTypes>
</CustomObject>